--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@ Factorization and Fuzzy Rule-Based Classifier", in Proceedings of IEEE Internati
 Fuzzy Systems (FUZZ-IEEE), July 9-12, 2017, Naples, Italy, pp.1-6, <font color="red">[Core Rank=A]</font></li><hr>
 <li><font color="blue">Achyut Mani Tripathi</font>, Rashmi Dutta Baruah, "Anomaly Detection in Data Streams Based on Graph Coloring
 Density Coefficients", in Proceedings of IEEE Symposium Series on Computational Intelligence
-(SSCI), Dec 6-9, 2016, Athens, Greece, pp.1-7, <font color="red">[Core Rank=B]</font></li><hr>
+(SSCI), Dec 6-9, 2016, Athens, Greece, pp.1-7, <font color="red">[Core Rank=C]</font></li><hr>
 <li><font color="blue">Achyut Mani Tripathi</font>, Diganta Baruah, Rashmi Dutta Baruah, "Acoustic Event Classification Using Ensemble of
 One-Class Classifiers for Monitoring Application", in Proceedings of IEEE Symposium Series on
-Computational Intelligence (SSCI), Dec 7-10, 2015, Cape Town, South Africa, pp.1681-1686, <font color="red">[Core Rank=B]</font></li><hr>
+Computational Intelligence (SSCI), Dec 7-10, 2015, Cape Town, South Africa, pp.1681-1686, <font color="red">[Core Rank=C]</font></li><hr>
 <li><font color="blue">Achyut Mani Tripathi</font>, Diganta Baruah, Rashmi Dutta Baruah, "Acoustic Sensor Based Activity Recognition Using
 Ensemble of One-Class Classifiers", in Proceedings of IEEE Conference on Evolving and Adaptive
 Intelligent Systems (EAIS) , Dec 1-3, 2015, Duoai, France, pp.1-7, <font color="red">[Core Rank=C]</font></li><hr>
