--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@ and Method for Activity Identification and Problem Prediction During Oil and Gas
 Drilling".</li></ul><hr>
 	<h3><font color="red"><b>Journals</b></font><br></h3><hr>
 	<ul>
+<li><b> <font color="blue">Achyut Mani Tripathi</font>,Konark Paul, "UAD-ESC: Universal Adversarial Datasets for Environmental 
+Sound Classification", IEEE/ACM Transactions on Audio, Speech, and Language Processing, <font color="red">Under Review</font></li><hr>		
 <li><b> <font color="blue">Achyut Mani Tripathi</font>, Aakansha Mishra, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
 Classification", IEEE/ACM Transactions on Audio, Speech, and Language Processing, <font color="red">Under
 Review</font></li><hr>
