--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@ img {
 						In My Ph.D., I worked Under The Supervision of Dr.Rashmi Dutta Baruah.<br>My Research Interests Include:<font color="#333399"> Deep Learning for Environmental Sound Classification, Adversarial Attacks on Deep Models, Knowledge Distillation for Deep Learning and Anomaly Detection in Time Series.</font></font><hr>
 					<h2><b> New Highlights:</h2><br>
 
-					<marquee marquee behavior="scroll" direction="up" scrollamount="2.5">
+					<marquee marquee behavior="scroll" direction="up" scrollamount="1.5">
 						<ul>
-				                 <li><font color="#C71585">12 June 2021: The Paper Titled "Environment Sound Classification Using An Attention-Based Residual Neural Network" is Accepted to Neurocomputing Journal, Elsevier
+				                 <li><font color="#29a329">12 June 2021: The Paper Titled "Environment Sound Classification Using An Attention-Based Residual Neural Network" is Accepted to Neurocomputing Journal, Elsevier
 						<li>13 May 2021: The Paper Titled "Self Supervised learning for Environmental Sound Classification" is Accepted to Applied Acoustic Journal, Elsevier</ul></font>
 					</marquee>
 				</div>
@@ -190,7 +190,7 @@ IEEE), July 19-24, 2020, New Glasgow, UK</li><hr>
 		<li>Development of Comprehensive Interactive Well Monitoring Software Tool for Drilling Supervisors.
 (Funding Agency: Funded by ONGC, Institute of Drilling Technology (IDT), Dehradun.)</li><hr>
 		<li>A System for Litter Monitoring and Control Using off-the-shelf: Sensors and Robotic Platforms.
-(Funding Agency: IITG start-up grant</li><hr>
+(Funding Agency: IITG start-up grant) </li><hr>
 		
 
 	</ul>
