--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@ img {
 						In My Ph.D., I worked Under The Supervision of Dr.Rashmi Dutta Baruah.<br>My Research Interests Include:<font color="#333399"> Deep Learning for Environmental Sound Classification, Adversarial Attacks on Deep Models, Knowledge Distillation for Deep Learning and Anomaly Detection in Time Series.</font></font><hr>
 					<h2><b> New Highlights:</h2><br>
 
-					<marquee marquee behavior="scroll" direction="up" scrollamount="1.5">
+					<marquee marquee behavior="scroll" direction="up" scrollamount="2">
 						<ul>
-				                 <li><font color="#29a329">12 June 2021: The Paper Titled "Environment Sound Classification Using An Attention-Based Residual Neural Network" is Accepted to Neurocomputing Journal, Elsevier
+				                 <li><font color="#1f7a1f">12 June 2021: The Paper Titled "Environment Sound Classification Using An Attention-Based Residual Neural Network" is Accepted to Neurocomputing Journal, Elsevier
 						<li>13 May 2021: The Paper Titled "Self Supervised learning for Environmental Sound Classification" is Accepted to Applied Acoustic Journal, Elsevier</ul></font>
 					</marquee>
 				</div>
