--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ img {
 
 					<marquee marquee behavior="scroll" direction="up" scrollamount="2">
 						<ul>
-				                 <li><font color="#1f7a1f">12 June 2021: The Paper Titled "Environment Sound Classification Using An Attention-Based Residual Neural Network" is Accepted to Neurocomputing Journal, Elsevier
+				                 <li><font color="#4B0082">12 June 2021: The Paper Titled "Environment Sound Classification Using An Attention-Based Residual Neural Network" is Accepted to Neurocomputing Journal, Elsevier
 						<li>13 May 2021: The Paper Titled "Self Supervised learning for Environmental Sound Classification" is Accepted to Applied Acoustic Journal, Elsevier</ul></font>
 					</marquee>
 				</div>
@@ -97,8 +97,8 @@ and Method for Activity Identification and Problem Prediction During Oil and Gas
 Drilling".</li></ul><hr>
 	<h3><font color="red"><b>Journals</b></font><br></h3><hr>
 	<ul>
-<li><b> <font color="blue">Achyut Mani Tripathi</font> "Divide and Attack (DAT): Upgrading Transferability of Adversarial Attacks for Environmental 
-Sound Classification", IEEE/ACM Transactions on Audio, Speech, and Language Processing, <font color="red">Under Review</font></li><hr>		
+<li><b> <font color="blue">Achyut Mani Tripathi</font> "An Empirical Study of Adversarial Attacks on Industrail Sound
+Classification", IEEE Transactions on Dependable and Secure Computing, <font color="red">Under Review</font></li><hr>		
 <li><b> <font color="blue">Achyut Mani Tripathi</font>, Aakansha Mishra, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
 Classification", IEEE/ACM Transactions on Audio, Speech, and Language Processing, <font color="red">Under
 Review</font></li><hr>
