--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@ img {
 
 					<marquee marquee behavior="scroll" direction="up" scrollamount="2">
 						<ul>
-				                 <li><font color="red">12 June 2021: The Paper Titled "Environment Sound Classification Using An Attention-Based Residual Neural Network" is Accepted to Neurocomputing Journal, Elsevier
-						<li>13 May 2021: The Paper Titled "Self Supervised learning for Environmental Sound Classification" is Accepted to Applied Acoustic Journal, Elsevier</ul></font>
+				                 <li><font color="red">12 June 2021: The Journal Paper Titled "Environment Sound Classification Using An Attention-Based Residual Neural Network" is Accepted to Neurocomputing, Elsevier
+						<li>13 May 2021: The Journal Paper Titled "Self Supervised learning for Environmental Sound Classification" is Accepted to Applied Acoustic, Elsevier</ul></font>
 					</marquee>
 				</div>
 			</div>
