--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@ and Method for Activity Identification and Problem Prediction During Oil and Gas
 Drilling".</li></ul><hr>
 	<h3><font color="red"><b>Journals</b></font><br></h3><hr>
 	<ul>	
-<li><b> <font color="blue">Achyut Mani Tripathi</font>, "Divide and Defend: Defense Against Adversarial Attacks on An Environmental SOund Classification", IEEE/ACM Transactions on Audio, Speech, and Language Processing (TASLP), <font color="red">Under
-Review</font>, <font color="red">[Impact Factor=3.919]</font></li><hr>		
+<li><b> <font color="blue">Achyut Mani Tripathi</font>, "Universal Defense Friendly Dataset (UDFD) for Defense Against Adversarial Attacks on An Environmental Sound Classification",Applied Acoustic, <font color="red">Under
+Review</font>, <font color="red">[Impact Factor=2.639]</font></li><hr>		
 <li><b> <font color="blue">Achyut Mani Tripathi*</font>, Aakansha Mishra*, "When Sub-Band Feature Meets Attention Mechanism While Knowledge Distillation for An Environmental Sound Classification: An Empirical Study", Neurocomputing, <font color="red">Under Prepration</font>, <font color="red">[Impact Factor=5.719]</font></li><hr>
 <li><b> <font color="blue">Achyut Mani Tripathi</font>, Aakansha Mishra, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
 Classification", IEEE/ACM Transactions on Audio, Speech, and Language Processing (TASLP), <font color="red">Under
