--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@ Systems (FUZZ-IEEE), July 19-24, 2020, Glasgow,UK, <font color="red">[Core Rank=
 <li> <font color="blue">Achyut Mani Tripathi</font>, Rashmi Dutta Baruah, "Contextual Anomaly Detection in Time Series Using Dynamic
 Bayesian Network", Asian Conference on Intelligent Information and Database Systems,Phuket,
 Thailand, March 26-29, 2020,<font color="red">[Core Rank=B]</font> </li><hr>
-<li> <font color="blue">Achyut Mani Tripathi</font>, Rashmi utta Baruah,"Anomaly Detection in Multivariate Time Series Using Fuzzy
+<li> <font color="blue">Achyut Mani Tripathi</font>, Rashmi Dutta Baruah,"Anomaly Detection in Multivariate Time Series Using Fuzzy
 AdaBoost and Dynamic Naive Bayesian Classifier", in Proceedings of IEEE International Conference
 on Systems, Man, and Cybernetics (SMC), Bari, Oct 6-9, 2019, Italy., <font color="red">[Core Rank=B]</font></li><hr>
-<li> <font color="blue">Achyut Mani Tripathi</font>, Rashmi utta Baruah, "Incremental Cauchy Non-Negative Matrix Factorization and
+<li> <font color="blue">Achyut Mani Tripathi</font>, Rashmi Dutta Baruah, "Incremental Cauchy Non-Negative Matrix Factorization and
 Fuzzy Rule-based Classifier for Acoustic Source Separation", in Proceedings of IEEE International
 Conference on Fuzzy Systems (FUZZ-IEEE), June 23-27, 2019, New Orelans, USA, <font color="red">[Core Rank=A]</font></li><hr>
-<li><font color="blue">Achyut Mani Tripathi</font>, Rashmi utta Baruah, "Acoustic Event Classification Using Cauchy Non-Negative Matrix
+<li><font color="blue">Achyut Mani Tripathi</font>, Rashmi Dutta Baruah, "Acoustic Event Classification Using Cauchy Non-Negative Matrix
 Factorization and Fuzzy Rule-Based Classifier", in Proceedings of IEEE International Conference on
 Fuzzy Systems (FUZZ-IEEE), July 9-12, 2017, Naples, Italy, pp.1-6, <font color="red">[Core Rank=A]</font></li><hr>
 <li><font color="blue">Achyut Mani Tripathi</font>, Rashmi Dutta Baruah, "Anomaly Detection in Data Streams Based on Graph Coloring
