--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ and Method for Activity Identification and Problem Prediction During Oil and Gas
 Drilling".</li></ul><hr>
 	<h3><font color="red"><b>Journals</b></font><br></h3><hr>
 	<ul>	
-<li><b> <font color="blue">Achyut Mani Tripathi</font>, "Universal Defense Friendly Dataset (UDFD) for Defense Against Adversarial Attacks on An Environmental Sound Classification",Neurocomputing, <font color="red">Under
+<li><b> <font color="blue">Achyut Mani Tripathi</font>, "When Sub-Band Features Meet Contrastive Learning for Knowledge Distillation: An Improved Compressed Deep Model for Environmental Sound Classification", Neurocomputing, <font color="red">Under
 Review</font>, <font color="red">[H-index=119, Impact Factor=5.719]</font></li><hr>		
 <li><b> <font color="blue">Achyut Mani Tripathi*</font>, Aakansha Mishra*, "When Sub-Band Feature Meets Attention Mechanism While Knowledge Distillation for An Environmental Sound Classification: An Empirical Study", Neurocomputing, <font color="red">Under Prepration</font>, <font color="red">[H-index=119, Impact Factor=5.719]</font></li><hr>
 <li><b> <font color="blue">Achyut Mani Tripathi</font>, Aakansha Mishra, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
