--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Classification", IEEE/ACM Transactions on Audio, Speech, and Language Processing
 <li> <font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "Data Augmentation Guided Knowledge Distillation for Environmental
 Sound Classification",Neurocomputing, Elsevier, <font color="red">Major Revision Submitted</font>, <font color="red">[H-index=119, Impact Factor=5.719]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi*</font>, Aakansha Mishra*, "(Adv-ESC): Adversarial Attack Datasets for An Environmental Sound
-Classification", Applied Acoustic, Elsevier, <font color="red">Accepted</font>, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
+Classification", Applied Acoustic, Elsevier,, 108437, Vol.185, 2021, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Aakansha Mishra, "Environment Sound Classification Using An Attention-Based Residual Neural Network",
 	Neurocomputing, Elsevier, Vol.460, Page 409-423, <font color="red">[H-index=119, Impact Factor=5.719]</font></font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Aakansha Mishra, "Self-Supervised Learning for Environmental Sound Classification",
